# person-similarity-using-rust

./: Cargo.toml  cspell.json
src/: data.rs  fallback.rs  main.rs  shutdown_signal.rs
src/controllers/: get_persons.rs  get_persons_similarity.rs
src/models/: person.rs
src/services/: similarity.rs
src/views/: html.rs
