[package]
name = "person-similarity-using-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "~0.8.4" } # Web framework that focuses on ergonomics and modularity.
hyper = { version = "~1.6.0", features = ["full"] } # A fast and correct HTTP library.
tokio = { version = "~1.45.1", features = ["full"] } # Event-driven, non-blocking I/O platform.
tower = { version =  "~0.5.2" } # Modular reusable components for building robust clients and servers.
serde = { version = "~1.0.219", features = ["derive"] } # A serialization/deserialization framework.
serde_json = { version = "~1.0.140" } # Serde serialization/deserialization of JSON data.
base64 = { version = "~0.22.1" } # Encode and decode base64 as bytes or utf8.
http = { version = "~1.3.1" } # Types for HTTP requests and responses.
tracing = { version = "~0.1.41" } #  Application-level tracing for Rust.
tracing-subscriber = { version = "~0.3.19", features = ["env-filter"] } # Utilities for `tracing` subscribers. 
similarity-trait = { version = "*" } # Compare items for similarity matching
strsim = { version = "0.11.1" } # String similarity metrics
